# fatfs_minimal_esp32s3

./: Cargo.toml  LICENSE-MIT
.cargo/: config.toml
src/: main.rs
