[package]
name = "fatfs"
version = "0.1.0"
authors = ["= <=>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
esp-backtrace = { version = "0.14.2", features = [
    "esp32s3",
    "exception-handler",
    "panic-handler",
    "println",
] }
esp-hal = { version = "0.22.0", features = ["esp32s3"] }

embedded-io-async = "0.6"
esp-println = { version = "0.12.0", features = ["esp32s3", "log"] }
log = { version = "0.4.22" }
# esp-alloc = { version = "0.5.0" }
# embedded-io = "0.6.1"
# esp-wifi = { version = "0.11.0", features = ["esp32s3", "utils", "wifi"] }
# heapless = { version = "0.8.0", default-features = false }
# smoltcp = { version = "0.12.0", default-features = false, features = [
#     "medium-ethernet",
#     "proto-dhcpv4",
#     "proto-ipv4",
#     "socket-dhcpv4",
#     "socket-icmp",
#     "socket-raw",
#     "socket-tcp",
#     "socket-udp",
# ] }

esp-hal-embassy = { version = "0.5.0", features = [
    "esp32s3",
    "integrated-timers",
] }
embassy-time = "0.3"
embassy-executor = { version = "0.6.3", features = ["task-arena-size-65536"] }
embedded-hal-async = "1"
embedded-hal-bus = { version = "0.2.0", features = ["async", "defmt-03"] }
# static_cell = { version = "2.1.0", features = ["nightly"] }

sdspi = { version = "0.1.0", git = "https://github.com/MabezDev/embedded-fatfs.git", features = [
    "log",
], rev = "428ad03" }
aligned = "0.4.2"
block-device-adapters = { version = "0.2.0", git = "https://github.com/MabezDev/embedded-fatfs.git", rev = "428ad03" }
embedded-fatfs = { version = "0.1.0", git = "https://github.com/MabezDev/embedded-fatfs.git", default-features = false, features = [
    "log",
], rev = "428ad03" }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
